content kaldırma tamam

--- a/YDev.Admin/YDev.Admin.csproj
+++ b/YDev.Admin/YDev.Admin.csproj
@@ -36,6 +36,10 @@
     <None Include="bundleconfig.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helper\" />
+  </ItemGroup>
+
 
 
 </Project>
