--- a/YDev.Service/YDev.Service.csproj
+++ b/YDev.Service/YDev.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,14 +7,6 @@
   <ItemGroup>
     <ProjectReference Include="..\YDev.Common\YDev.Common.csproj" />
     <ProjectReference Include="..\YDev.Data\YDev.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Helper\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
 </Project>
