--- a/YDev.Admin/YDev.Admin.csproj
+++ b/YDev.Admin/YDev.Admin.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.435" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.435" />
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.15.4" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
