--- a/YDev.Admin/YDev.Admin.csproj
+++ b/YDev.Admin/YDev.Admin.csproj
@@ -43,6 +43,10 @@
     <None Include="bundleconfig.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Upload\images\thumbs\" />
+  </ItemGroup>
+
 
 
 </Project>
